OPTINUM 1: drei Graphen in Kapitel 5 ergänzt (bsp 5.2, 5.3 & 5.4)

--- a/Math-Ba-OPTINUM/OPTINUM_1_Vorlesung/optinum_abb/optinum_5_2_bsp5-1.tex
+++ b/Math-Ba-OPTINUM/OPTINUM_1_Vorlesung/optinum_abb/optinum_5_2_bsp5-1.tex
@@ -24,14 +24,14 @@
 		\node (6) at (6,0) [circle,draw] {$v_6$};
 	% Kanten
 %		\path (1) -> node[weight] {$3$} (3)
-		\draw[->] (1) edge node{\scriptsize 5} (3);
-		\draw[->] (1) edge node{\scriptsize 3} (2);
-		\draw[->] (3) edge node{\scriptsize 8} (5);
-		\draw[->] (2) edge node{\scriptsize 6} (4);
-		\draw[->] (3) edge node{\scriptsize 5} (2);
-		\draw[->] (4) edge node{\scriptsize 10} (6);
-		\draw[->] (3) edge node{\scriptsize 3} (4);
-		\draw[->] (4) edge node{\scriptsize 7} (5);
-		\draw[->] (5) edge node{\scriptsize 2} (6);
+		\draw[-] (1) edge node{\scriptsize 5} (3);
+		\draw[-] (1) edge node{\scriptsize 3} (2);
+		\draw[-] (3) edge node{\scriptsize 8} (5);
+		\draw[-] (2) edge node{\scriptsize 6} (4);
+		\draw[-] (3) edge node{\scriptsize 5} (2);
+		\draw[-] (4) edge node{\scriptsize 10} (6);
+		\draw[-] (3) edge node{\scriptsize 3} (4);
+		\draw[-] (4) edge node{\scriptsize 7} (5);
+		\draw[-] (5) edge node{\scriptsize 2} (6);
 	\end{tikzpicture}
 \end{document}
