OPTINUM 1: ein paar mehr Korrekturen

--- a/Math-Ba-OPTINUM/OPTINUM_1_Vorlesung/optinum_4_2_methodeBranchBound.tex
+++ b/Math-Ba-OPTINUM/OPTINUM_1_Vorlesung/optinum_4_2_methodeBranchBound.tex
@@ -400,6 +400,7 @@ und kann an jeder Nullzelle vorab notiert werden. Für die Verzweigung ist dann 
 			& $\infty$ & $0^{\textcolor{cdpurple}{7}}$ & $\infty$ & 5 & 3 \\
 			& 7 & 4 & 1 & $\infty$ & $0^{\textcolor{cdpurple}{3}}$ \\
 			& $0^{\textcolor{cdpurple}{4}}$ & 7 & 3 & $0^{\textcolor{cdpurple}{5}}$ & $\infty$ \\ 
+			% ich habe an (4,2) eine 4, lt Robin eine 0 ??
 		\end{tabular}
 	\end{center}
 	Die Hilfsgröße $\textcolor{cdpurple}{\schlange{w}_{ik}}$ ist für $(i,k) = (3,2)$ maximal. Die nächste Verzweigung wäre also $x_{32} = 0$ vs. $x_{32} = 1$.
