--- a/Math-Ba-OPTINUM/OPTINUM_1_Vorlesung/optinum_vorlesung_main.tex
+++ b/Math-Ba-OPTINUM/OPTINUM_1_Vorlesung/optinum_vorlesung_main.tex
@@ -79,6 +79,8 @@
 \DeclareMathOperator{\FAZ}{FAZ}
 \DeclareMathOperator{\SAZ}{SAZ}
 \DeclareMathOperator{\PZ}{PZ}
+
+\usepackage{stmaryrd}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
