--- a/Math-Ba-OPTINUM/OPTINUM_1_Vorlesung/optinum_4_4_schnittebenenverfahren.tex
+++ b/Math-Ba-OPTINUM/OPTINUM_1_Vorlesung/optinum_4_4_schnittebenenverfahren.tex
@@ -17,11 +17,11 @@ Nehmen wir also an, dass \eqref{eq: 4-4-q} mit dem Simplex-Verfahren gelöst wur
 \begin{equation*}
 	\begin{array}{rcll}
 		x_B &=& Px_N + p \quad &(p \ge 0) \\
-		z   &=& \trans{q} x_n + q_0  \quad &(q \ge 0)
+		z   &=& \trans{q} x_N + q_0  \quad &(q \ge 0)
 	\end{array}
 	\qquad \text{ bzw. } \qquad 
 	\begin{array}{rcl}
-		x_B - Px_n &=& p \\
+		x_B - Px_N &=& p \\
 		z &=& \trans{q} x_N + q_0
 	\end{array}
 \end{equation*}
@@ -50,18 +50,18 @@ Beide Beobachtungen zusammen ergeben
 	Die Ungleichung $\sum_{j \in N} r_{ij} x_j \ge r_i$ heißt \begriff{\person{Gomory}-Schnitt} zur Zeile $i \in I_B$.
 \end{definition}
 
-Aufgrund von $x_j = 0$ für alle $j \in N$ (für die aktuell betrachtete Lösung $x$ von \eqref{eq: 4-4-q}) und $p_i \in \Z_+$ erhält man
+Aufgrund von $x_j = 0$ für alle $j \in N$ (für die aktuell betrachtete Lösung $x$ von \eqref{eq: 4-4-q}) und $p_i \notin \Z_+$ erhält man
 \begin{itemize}
 	\item $r_i = p_i - \left\lfloor p_i \right\rfloor > 0$
-	\item $0 \overset{x_N = 0}{=} \sum_{j \in N} r_{ij} x_j \ge r_i > 0 \follows \lightning$ 
+	\item $0 \overset{x_N = 0}{=} \sum_{j \in N} r_{ij} x_j \ge r_i > 0 \follows \text{\lightning}$
 \end{itemize}
 Das heißt also, dass die aktuelle (stetige) Lösung $x$ vom zulässigen Bereich \enquote{abgetrennt} wird.
 
-Setzt man zulässig man zusätzlich $r_{ij} = 0$ für $j \in B$, so erhält man einen Koeffizientenvektor $r^{(1)} \in \Rn$ und es gilt
+Setzt man zusätzlich $r_{ij} = 0$ für $j \in B$, so erhält man einen Koeffizientenvektor $r^{(i)} \in \Rn$ und es gilt
 \begin{equation*}
 	G_p \defeq \menge{x \in \Z_+^n: Ax = b} = \menge{x \in \Z_+^n: Ax = b, \transpose{r^{(1)}} x \ge r_i}
 \end{equation*}
-Durch Gormory-Schnitte erhält man eine im Allgmeinen strengere Relaxation zu \eqref{eq: 4-4-p}
+Durch Gormory-Schnitte erhält man eine im Allgemeinen strengere Relaxation zu \eqref{eq: 4-4-p}
 \begin{equation*}
 	z = \trans{q} x_N + q_0 \to \min \bei x_B = Px_ N + p, \quad s = \sum_{j \in N} r_{ij} x_j \underbrace{- r_i}_{< 0}, \quad x_B, x_N, s \ge 0
 	\tag{$Q_1$} \label{eq: 4-4-q1}
@@ -84,35 +84,36 @@ Insgesamt ergibt sich damit das Gomory-Verfahren:
 	\label{beispiel: 4.6}
 	Wir betrachten
 	\begin{equation*}
-		x_1 \to \min \bei -4x_1 + 4x_2 \le -1 , 8x_1 + 16x_2 \le 0, x_1, x_2 \in \Z_+ 
+		x_1 \to \min \bei -4x_1 + 4x_2 \le -1 , 8x_1 + 16x_2 \le 9, x_1, x_2 \in \Z_+ 
 		\tag{P} \label{eq: 4.6-p}
 	\end{equation*}
 	Die Einführung von Schlupfvariablen liefert
-	
-	\begin{tabular}{l m{5cm}}
-		\begin{tabular}{r|cc|c}
-			$T_0$ & $x_1$ & $x_2$ & $1$ \\ \hline
-			$x_3$ & \fbox{$4$} & $-4$ & $-1$ \\
-			$x_4$ & $-8$ & $-16$ & $9$ \\ \hline
-			$z$ & $1$ & $0$ & $0$ \\ \hline
-			K & $\ast$ & $1$ & $\frac{1}{4}$
+	\begin{center}
+		\begin{tabular}{c c m{5cm}}
+			\begin{tabular}{r|cc|c}
+				$T_0$ & $x_1$ & $x_2$ & $1$ \\ \hline
+				$x_3$ & \fbox{$4$} & $-4$ & $-1$ \\
+				$x_4$ & $-8$ & $-16$ & $9$ \\ \hline
+				$z$ & $1$ & $0$ & $0$ \\ \hline
+				K & $\ast$ & $1$ & $\frac{1}{4}$
+			\end{tabular}
+			& $\leadsto$ &
+			\begin{tabular}{r|cc|c}
+				$T_1$ & $x_3$ & $x_2$ & $1$ \\ \hline
+				$x_1$ & $\frac{1}{4}$ & $1$ & $\frac{1}{4}$ \\
+				$x_4$ & $-2$ & $-24$ & $7$ \\ \hline
+				$z$ & $\frac{1}{4}$ & $1$ & $\frac{1}{4}$ \\
+			\end{tabular} 
+			\\
+			dual zulässig
+			& &
+			optimales Tableau, aber nicht ganzzahlig	
 		\end{tabular}
-		&
-		\begin{tabular}{r|cc|c}
-			$T_1$ & $x_3$ & $x_2$ & $1$ \\ \hline
-			$x_1$ & $\frac{1}{4}$ & $1$ & $\frac{1}{4}$ \\
-			$x_4$ & $-2$ & $-24$ & $7$ \\ \hline
-			$z$ & $\frac{1}{4}$ & $1$ & $\frac{1}{4}$ \\
-		\end{tabular} 
-		\\
-		dual zulässig
-		&
-		optimales Tableau, aber nicht ganzzahlig	
-	\end{tabular}
+	\end{center}
 
 	Es gilt $p_1 = \frac{1}{4} \notin \Z$, also erhält man den Gomory-Schnitt
 	\begin{equation*}
-			\underbrace{\brackets{\left\lceil \frac{1}{3} \right\rceil - \frac{1}{4}}}_{=r_{13}} x_3 + \underbrace{\brackets{\left\lceil 1 \right\rceil - 1}}_{= r_{12}} x_2 \ge \underbrace{\frac{1}{4} - \left\lfloor \frac{1}{4} \right\rfloor}_{=r_1}
+			\underbrace{\brackets{\left\lceil \frac{1}{4} \right\rceil - \frac{1}{4}}}_{=r_{13}} x_3 + \underbrace{\brackets{\left\lceil 1 \right\rceil - 1}}_{= r_{12}} x_2 \ge \underbrace{\frac{1}{4} - \left\lfloor \frac{1}{4} \right\rfloor}_{=r_1}
 			\equivalent \frac{3}{4} x_3 \ge \frac{1}{4} \leadsto s_1 = \frac{3}{4} x_3 - \frac{1}{4} (s_1 \ge 0)
 	\end{equation*}
 	
