OPTINUM 1: ein paar mehr Korrekturen

--- a/Math-Ba-OPTINUM/OPTINUM_1_Vorlesung/optinum_5_3_optimaleWege.tex
+++ b/Math-Ba-OPTINUM/OPTINUM_1_Vorlesung/optinum_5_3_optimaleWege.tex
@@ -58,7 +58,7 @@ Sei $d_G(s,v)$ sei die Länge eines kürzesten Weges von $s$ nach $v$ in $G= (V,
 		\begin{equation*}
 			d(u) > d_G(s,u = d_G(s,y) + d_G(y,u) = d(y) + d_G(y,u) \follows d(u) > d(y)
 		\end{equation*}
-		Also hätte un aktuellen Schritt $u$ nicht in $M$ aufgenommen werde dürfen. Widerspruch.
+		Also hätte im aktuellen Schritt $u$ nicht in $M$ aufgenommen werde dürfen. Widerspruch.
 	\end{induction}
 \end{proof}
 
@@ -94,7 +94,7 @@ Sei $d_G(s,v)$ sei die Länge eines kürzesten Weges von $s$ nach $v$ in $G= (V,
 		\end{tabular}
 	\end{minipage}
 
-	Ein minimaler Weg von $v_1$ nach $v_8$ lautet als
+	Ein minimaler Weg von $v_1$ nach $v_8$ lautet also
 	\begin{equation*}
 		v_8 \leftarrow v_7 \leftarrow v_4 \leftarrow v_1
 	\end{equation*}
