OPTINUM 1: ein paar mehr Korrekturen

--- a/Math-Ba-OPTINUM/OPTINUM_1_Vorlesung/optinum_3_3_dualesSimplexverfahren.tex
+++ b/Math-Ba-OPTINUM/OPTINUM_1_Vorlesung/optinum_3_3_dualesSimplexverfahren.tex
@@ -56,8 +56,8 @@ Die eigentlichen Austauschregeln sind analog zu denen des primalen Simplexverfah
 		\begin{tabular}{R{1cm}|R{.5cm}R{.5cm}R{.5cm}R{.5cm}R{.5cm}|R{.9cm}l}
 			$T_0$ & $x_1$ & $x_2$ & $x_3$ & $x_4$ & $x_5$ & $1$ \\ \cline{1-7}
 			$x_6 =$ & $1$ & $0$ & $1$ & $1$ & $1$ & $-300$ \\
-			$x_7 =$ & $0$ & \fbox{$1$} & $2$ & $1$ & $0$ & $-400$ \\ \cline{1-7}
-			$z =$   & $6$ & $5$ & $12$ & $8$ & $9$ & $0$ & $\leftarrow \sigma = 7$ \\ \cline{1-7}
+			$x_7 =$ & $0$ & \fbox{$1$} & $2$ & $1$ & $0$ & $-400$ & $\leftarrow \sigma = 7$ \\ \cline{1-7}
+			$z =$   & $6$ & $5$ & $12$ & $8$ & $9$ & $0$ \\ \cline{1-7}
 			Keller  & $0$ & $\ast$ & $-2$ & $-1$ & $0$ & $400$
 		\end{tabular}
 	\end{indentpar}
