--- a/Math-Ba-OPTINUM/OPTINUM_1_Vorlesung/optinum_4_2_methodeBranchBound.tex
+++ b/Math-Ba-OPTINUM/OPTINUM_1_Vorlesung/optinum_4_2_methodeBranchBound.tex
@@ -195,7 +195,7 @@ mit $x^{\text{LP}}_j \notin \Z$ für mindestens einen Index $j$. Dann kann der (
 	Betrachte 
 	\begin{equation*}
 	\begin{alignedat}{4}
-		z = -7x_1 - 2x_2 \to \min \bei &&-x_1 &+ &2x_2 &+ &x_4 &= 4 \\
+		z = -7x_1 - 2x_2 \to \min \bei &&-x_1 &+ &2x_2 &+ &x_3 &= 4 \\
 		&&5x_1 &+ &x_2 &+ &x_4 &= 20, \quad x_1, \dots, x_n \in \Z_+
 	\end{alignedat}
 	\end{equation*}
@@ -243,7 +243,7 @@ mit $x^{\text{LP}}_j \notin \Z$ für mindestens einen Index $j$. Dann kann der (
 				\begin{tabular}{r|rr|r}
 					$T_3'$ & $x_4$ & $x_3$ & $1$ \\ \hline
 					$x_2 = $ & $-\frac{1}{11}$ & $-\frac{5}{11}$ & $\frac{40}{11}$ \\
-					$x_1 = $ & $\frac{-2}{11}$ & $\frac{1}{11}$ & $\frac{26}{11}$ \\
+					$x_1 = $ & $\frac{-2}{11}$ & $\frac{1}{11}$ & $\frac{36}{11}$ \\
 					$s_2 = $ & $\frac{1}{11}$ & \fbox{$\frac{5}{11}$} & $-\frac{7}{11}$ \\ \hline
 					$z = $   & $\frac{16}{11}$ & $\frac{3}{11}$ & $-\frac{332}{11}$ \\ \hline
 					Keller & $-\frac{1}{5}$ & $\ast$ & $\frac{7}{5}$
@@ -269,7 +269,7 @@ mit $x^{\text{LP}}_j \notin \Z$ für mindestens einen Index $j$. Dann kann der (
 					$x_2 = $ & $0$ & $-1$ & $3$ \\
 					$x_1 = $ & $-\frac{1}{5}$ & $\frac{1}{5}$ & $\frac{17}{5}$ \\
 					$x_3 = $ & $-\frac{1}{5}$ & $\frac{11}{5}$ & $\frac{7}{5}$ \\
-					$s_1 = $ & $-\frac{1}{5}$ & \fbox{$\frac{1}{5}$} & $\frac{3}{5}$ \\ \hline
+					$s_1 = $ & $-\frac{1}{5}$ & \fbox{$\frac{1}{5}$} & $-\frac{3}{5}$ \\ \hline
 					$z = $   & $\frac{7}{5}$ & $\frac{3}{5}$ & $-\frac{149}{5}$
 				\end{tabular}
 				$\quad \overset{s_1 \leftrightarrow s_2}{\longrightarrow} \quad$	
