OPTINUM 1: ein paar mehr Korrekturen

--- a/Math-Ba-OPTINUM/OPTINUM_1_Vorlesung/optinum_3_5_transportoptimierung.tex
+++ b/Math-Ba-OPTINUM/OPTINUM_1_Vorlesung/optinum_3_5_transportoptimierung.tex
@@ -203,7 +203,7 @@ Darstellung der Inputdaten oder zulässigen Punkte in folgenden Schemata:
 		\begin{tabular}{r|rrrrr}
 			$\text{X}_{\text{MK}}$ & 12 &  5 &  6 & \cancel{7} 0 &  \cancel{7} 3 \\ \hline
 			0 \cancel{4} & 0 &  0 & 0 &  0 &  $\fbox{4}^3$ \\
-			0 \cancel{12} \cancel{19} & 0 & $\fbox{5}$ & $\fbox{4}$ &  $\fbox{7}^1$ &  $\fbox{3}$ \\
+			0 \cancel{12} \cancel{19} & 0 & $\fbox{5}^6$ & $\fbox{4}^7$ &  $\fbox{7}^1$ &  $\fbox{3}^5$ \\
 			0 \cancel{2} \cancel{14} &  $\fbox{12}^2$ & 0 &  $\fbox{2}^4$ &  0 & 0
 		\end{tabular}
 	\end{center}
