--- a/Math-Ba-OPTINUM/OPTINUM_1_Vorlesung/optinum_4_2_methodeBranchBound.tex
+++ b/Math-Ba-OPTINUM/OPTINUM_1_Vorlesung/optinum_4_2_methodeBranchBound.tex
@@ -218,7 +218,7 @@ mit $x^{\text{LP}}_j \notin \Z$ für mindestens einen Index $j$. Dann kann der (
 			\end{tabular}
 		\end{center}	
 		%
-		\item Verzweigung: nach $x_2$, da $\min \menge{4-\frac{40}{11}, \frac{40}{11} - 3} > \min \menge{4 - \frac{36}{11}, \frac{36}{11} - 3}$. 
+		\item Verzweigung: nach $x_2$, da $\min \menge{4-\frac{40}{11}, \frac{40}{11} - 3} > \min \menge{4 - \frac{36}{11}, \frac{36}{11} - 3}$ ($x_2$ ist weiter von der nächsten ganzen Zahl weg). 
 		\begin{itemize}
 			\item 1. Teilproblem: $x_2 \ge 4$ (führe $s_2 \ge 0$ ein)
 			\begin{equation*}
@@ -233,8 +233,8 @@ mit $x^{\text{LP}}_j \notin \Z$ für mindestens einen Index $j$. Dann kann der (
 			\item 2. Teilproblem: $x_2 \le 3$ (führe $s_2 \ge 0$ ein)
 			\begin{equation*}
 				\begin{aligned}
-					s_2 &= 3 - x_2 = 3 - (-\frac{1}{11} x_4 - \frac{5}{11} x_3 + \frac{40}{11}) \\
-					&= \frac{1}{11} x_4 + \frac{5}{11} x_3 - \frac{7}{11}
+					s_2 = 3 - x_2 = 3 - (-\frac{1}{11} x_4 - \frac{5}{11} x_3 + \frac{40}{11}) 
+					= \frac{1}{11} x_4 + \frac{5}{11} x_3 - \frac{7}{11}
 				\end{aligned}
 			\end{equation*}
 			Füge dies ist $T_3$ ein:
