OPTINUM 1: Variante mit weißem Deckblatt zum Drucken

--- a/Math-Ba-OPTINUM/OPTINUM_1_Vorlesung/optinum_vorlesung_main.tex
+++ b/Math-Ba-OPTINUM/OPTINUM_1_Vorlesung/optinum_vorlesung_main.tex
@@ -81,6 +81,52 @@
 \DeclareMathOperator{\PZ}{PZ}
 
 \usepackage{stmaryrd}
+
+
+
+\renewcommand{\makeTUtitle}{%
+	\begin{titlepage}
+		\pagecolor{cddarkblue!90}%
+		\color{white}%
+		
+		\raggedright%
+		\fosfamily%
+		\setlength{\parindent}{0pt}%
+
+		
+		\hspace{-18.6mm}
+		\includegraphics[scale=0.6]{TUD-white.pdf}%
+%		\includegraphics[scale=0.6]{TUD-blue.pdf} 
+		\vspace{3mm} 
+		\begin{tabular}{m{\textwidth}}
+			\hline
+			\hspace{-4pt}\small{\textbf{Fakultät Mathematik} Institut für Numerik, Professur für Numerik der Optimalen Steuerung} \\
+			\hline
+		\end{tabular} \\
+	
+		\vspace{5cm}
+		{\Huge\bfseries \MakeUppercase Optimierung und Numerik \par}
+		%
+		% Untertitel
+		\vspace{0.5cm}%
+		{\Large \itshape Teil 1 --- Optimierung} \\%
+		
+		%
+		\vspace{1.5cm}
+		\textbf{{\Large Dr. John Martinovic}} \par
+		\vspace{0.5cm}
+		{\large Wintersemester 2019/20}
+		
+		
+		
+		\vfill%
+		\begin{tabular}{lll}
+			Autor  & : & Eric Kunze \\
+			E-Mail & : & \url{eric.kunze@mailbox.tu-dresden.de} \\
+		\end{tabular}%
+	\end{titlepage}
+	\nopagecolor
+}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
